--- a/GolfGame.csproj
+++ b/GolfGame.csproj
@@ -23,16 +23,7 @@
       <PackageReference Include="glfw-net" Version="3.3.1" />
     </ItemGroup>
     <ItemGroup>
-      <None Update="glfw\glfw3.dll">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="glfw\glfw3.lib">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="glfw\glfw3dll.lib">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="glfw\glfw3_mt.lib">
+      <None Update="glfw\glfw.dll">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
