--- a/GolfGame.csproj
+++ b/GolfGame.csproj
@@ -21,13 +21,6 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="OpenTK" Version="5.0.0-pre.3" />
-    </ItemGroup>
-    <ItemGroup>
-      <None Update="glfw.dll">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="glfw\" />
+      <PackageReference Include="Unknown6656.Core" Version="1.0.20.2" />
     </ItemGroup>
 </Project>
