added common includes

--- a/cpp/GolfGame.vcxproj
+++ b/cpp/GolfGame.vcxproj
@@ -92,8 +92,10 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="common.hpp" />
     <ClInclude Include="game.hpp" />
     <ClInclude Include="main.hpp" />
+    <ClInclude Include="shader.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="shaders\shader.frag">
