--- a/cpp/GolfGame.vcxproj.filters
+++ b/cpp/GolfGame.vcxproj.filters
@@ -37,10 +37,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <CopyFileToFolders Include="glew32.dll" />
+    <CopyFileToFolders Include="glfw3.dll" />
     <CopyFileToFolders Include="shaders\shader.frag" />
     <CopyFileToFolders Include="shaders\shader.geom" />
     <CopyFileToFolders Include="shaders\shader.vert" />
-    <CopyFileToFolders Include="glew32.dll" />
-    <CopyFileToFolders Include="glfw3.dll" />
+    <CopyFileToFolders Include="shaders\*" />
+    <CopyFileToFolders Include="shaders\*" />
+    <CopyFileToFolders Include="shaders\*" />
   </ItemGroup>
 </Project>
