updated project files

--- a/cpp/GolfGame.vcxproj.filters
+++ b/cpp/GolfGame.vcxproj.filters
@@ -46,4 +46,7 @@
     <CopyFileToFolders Include="shaders\*" />
     <CopyFileToFolders Include="shaders\*" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\common.glsl" />
+  </ItemGroup>
 </Project>
