--- a/cpp/GolfGame.vcxproj
+++ b/cpp/GolfGame.vcxproj
@@ -112,6 +112,9 @@
     <CopyFileToFolders Include="shaders\shader.vert">
       <FileType>Document</FileType>
     </CopyFileToFolders>
+    <CopyFileToFolders Include="shaders\common.glsl">
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="glew32.dll">
