updated project files to include the new shaders

--- a/cpp/GolfGame.vcxproj
+++ b/cpp/GolfGame.vcxproj
@@ -103,16 +103,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="shaders\shader.frag">
-      <FileType>Document</FileType>
-    </CopyFileToFolders>
-    <CopyFileToFolders Include="shaders\shader.geom">
-      <FileType>Document</FileType>
-    </CopyFileToFolders>
-    <CopyFileToFolders Include="shaders\shader.vert">
-      <FileType>Document</FileType>
-    </CopyFileToFolders>
-    <CopyFileToFolders Include="shaders\common.glsl">
+    <CopyFileToFolders Include="shaders\*">
       <FileType>Document</FileType>
     </CopyFileToFolders>
   </ItemGroup>
