updated project files

--- a/cpp/GolfGame.vcxproj
+++ b/cpp/GolfGame.vcxproj
@@ -103,17 +103,18 @@
     <Content Include="shaders\*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="fonts\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="shaders\*">
       <FileType>Document</FileType>
     </CopyFileToFolders>
-  </ItemGroup>
-  <ItemGroup>
-    <CopyFileToFolders Include="glew32.dll">
+    <CopyFileToFolders Include="fonts\*">
       <FileType>Document</FileType>
     </CopyFileToFolders>
-    <CopyFileToFolders Include="glfw3.dll">
+    <CopyFileToFolders Include="..\dependencies\lib\freetype.dll">
       <FileType>Document</FileType>
     </CopyFileToFolders>
   </ItemGroup>
