--- a/cpp/GolfGame.vcxproj.filters
+++ b/cpp/GolfGame.vcxproj.filters
@@ -15,30 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="*.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="glad.c">
+    <ClCompile Include="*.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="main.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="game.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="shader.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="common.hpp">
+    <ClInclude Include="*.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="glew32.dll" />
-    <CopyFileToFolders Include="glfw3.dll" />
     <CopyFileToFolders Include="shaders\*" />
+    <CopyFileToFolders Include="fonts\*" />
+    <CopyFileToFolders Include="..\dependencies\lib\*.dll" />
   </ItemGroup>
 </Project>
