--- a/cpp/GolfGame.vcxproj.filters
+++ b/cpp/GolfGame.vcxproj.filters
@@ -15,21 +15,57 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="*.cpp">
+    <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="*.c">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="*.hpp">
+    <ClInclude Include="game.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="main.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="common.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="game.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="main.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="shader.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="font.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="shaders\*" />
-    <CopyFileToFolders Include="fonts\*" />
-    <CopyFileToFolders Include="..\dependencies\lib\*.dll" />
+    <CopyFileToFolders Include="shaders\post-process.frag" />
+    <CopyFileToFolders Include="shaders\post-process.vert" />
+    <CopyFileToFolders Include="shaders\shader.frag" />
+    <CopyFileToFolders Include="shaders\shader.geom" />
+    <CopyFileToFolders Include="shaders\shader.vert" />
+    <CopyFileToFolders Include="..\dependencies\lib\glew32.dll" />
+    <CopyFileToFolders Include="..\dependencies\lib\glfw3.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\common.glsl" />
+    <None Include="shaders\post-process.frag" />
+    <None Include="shaders\post-process.vert" />
+    <None Include="shaders\shader.frag" />
+    <None Include="shaders\shader.geom" />
+    <None Include="shaders\shader.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="fonts\smallfont.ttf" />
   </ItemGroup>
 </Project>
