--- a/cpp/GolfGame.vcxproj
+++ b/cpp/GolfGame.vcxproj
@@ -125,6 +125,9 @@
     <None Include="shaders\font.frag">
       <DeploymentContent>true</DeploymentContent>
     </None>
+    <None Include="shaders\font.glsl">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
     <None Include="shaders\font.vert">
       <DeploymentContent>true</DeploymentContent>
     </None>
@@ -148,7 +151,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Font Include="fonts\smallfont.ttf">
+    <Font Include="fonts\arcade.ttf">
       <DeploymentContent>true</DeploymentContent>
     </Font>
   </ItemGroup>
