--- a/cpp/golf-game-cpp.vcxproj
+++ b/cpp/golf-game-cpp.vcxproj
@@ -154,6 +154,7 @@
     <Font Include="fonts\arcade.ttf">
       <DeploymentContent>true</DeploymentContent>
     </Font>
+    <Font Include="fonts\basis33.regular.ttf" />
   </ItemGroup>
   <!--
   <ItemGroup>
