--- a/cpp/golf-game-cpp.vcxproj
+++ b/cpp/golf-game-cpp.vcxproj
@@ -158,7 +158,7 @@
     <Font Include="assets\basis33.regular.ttf" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="assets\club-icons.png" />
+    <Image Include="assets\clubs.png" />
   </ItemGroup>
   <!--
   <ItemGroup>
