--- a/cpp/golf-game-cpp.vcxproj.filters
+++ b/cpp/golf-game-cpp.vcxproj.filters
@@ -71,5 +71,8 @@
     <Image Include="assets\clubs.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="assets\flagpole.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
