--- a/cpp/golf-game-cpp.vcxproj.filters
+++ b/cpp/golf-game-cpp.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="stb_image.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="patterns.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\common.glsl" />
