--- a/src/golf-god.vcxproj.filters
+++ b/src/golf-god.vcxproj.filters
@@ -80,5 +80,8 @@
     <Image Include="assets\player.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="assets\trees.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
