--- a/src/golf-god.vcxproj.filters
+++ b/src/golf-god.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="patterns.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\common.glsl" />
@@ -65,6 +68,7 @@
     <None Include="shaders\font.frag" />
     <None Include="shaders\shader.glsl" />
     <None Include="shaders\font.glsl" />
+    <None Include="golf-god.aps" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="assets\arcade.ttf" />
@@ -83,5 +87,16 @@
     <Image Include="assets\trees.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="assets\icon.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="assets\icon.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="golf-god.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
